create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1384,7 +1384,7 @@ body {
 .cid-rePDMD0wpV {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background3.jpg");
+  background-image: url("../../../assets/images/ufficionuovo-2000x1179.png");
 }
 .cid-rePDMD0wpV .mbr-figure {
   margin: 0 auto;
@@ -1402,27 +1402,14 @@ body {
     width: 100% !important;
   }
 }
-.cid-rePBUUvPi7 {
-  padding-top: 15px;
-  padding-bottom: 0px;
-  background-color: #1e9cd8;
-}
-.cid-rePBUUvPi7 .mbr-text {
-  color: #767676;
-}
-.cid-rePBUUvPi7 h4 {
+.cid-rePDMD0wpV .mbr-text,
+.cid-rePDMD0wpV .mbr-section-btn {
   text-align: center;
 }
-.cid-rePBUUvPi7 p {
-  text-align: center;
-}
-.cid-rePBUUvPi7 .card-img span {
-  font-size: 96px;
-  color: #149dcc;
-}
-.cid-rePBUUvPi7 .card-title,
-.cid-rePBUUvPi7 .card-img {
-  color: #ffffff;
+.cid-reQgPpDU9E {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #ffffff;
 }
 .cid-reLVvM0ojn .google-map {
   height: 25rem;
